# http-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.tox  README.md  azure-pipelines.yaml  create_setup.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/workflows/: pr-validations.yaml
http_utils/: helpers.py  hooks.py  session.py  settings.py
scripts/: start-formatter-lint.sh  start-tests.sh
tests/: test_helpers.py  test_hooks.py  test_session.py
tox/: Dockerfile
